// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mount and unmount component could be updated and unmounted without errors 1`] = `
<DocumentFragment>
  <div
    class="container-0-2-1"
  />
</DocumentFragment>
`;

exports[`mount and unmount component could be updated and unmounted without errors 2`] = `
<DocumentFragment>
  <div
    class="container-0-2-1"
  >
    <div />
    <div
      class="container-0-2-1"
    />
    <div>
      <p />
    </div>
  </div>
</DocumentFragment>
`;

exports[`mount and unmount component could be updated and unmounted without errors 3`] = `
<DocumentFragment>
  <div
    class="container-0-2-1"
  />
</DocumentFragment>
`;

exports[`mount and unmount component could be updated and unmounted without errors 4`] = `
<DocumentFragment>
  <div
    class="container-0-2-1"
  >
    <div
      class="container-0-2-1"
    />
    <div />
    <div
      class="container-0-2-1"
    />
    <div>
      <p />
    </div>
    <div
      class="container-0-2-1"
    />
  </div>
</DocumentFragment>
`;
